--- a/Eclipse/LeagueOfStalk/WebContent/SummonerPreview.html
+++ b/Eclipse/LeagueOfStalk/WebContent/SummonerPreview.html
@@ -3,23 +3,20 @@
 <head>
 <meta charset="utf-8">
 <title>SummonerSite</title>
-<style type="text/css">
-.summonerdata {
-}
-</style>
 <link href="CSS/LoSStyleSheet.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/electrolize:n4:default.js" type="text/javascript"></script>
 
 </head>
 
 <body class="body">
-	<div class summonerkompakt>
-	<div class="summonerPreview">
-			<img  src="PICTURES/testSummonerIcon.png" alt="" class="summomerIcon"> 
-			<!--<img  src=${sIcon} alt="" class="summomerIcon" ></img>-->
-	 <div class="summonerdata"><br>${name}<br>
-		 Level: ${lvl}<br>Solo: ${devS} <br>Flexi: ${devF} <br>Rank: ${rank}<br>KDA: ${rank}<br></div></div></div>
 
-<div class="achievements">Achivements<br><hr>-Pictures of Achievements-<br></div>
+	 
+		   <div class="summonerPreview">
+					<img  src="PICTURES/testSummonerIcon.png" alt="" class="summomerIcon"> 
+					<!--<img  src=${sIcon} alt="" class="summomerIcon" ></img>-->
+		    <div class="summonerdata"><br>${name}<br>Level: ${lvl}<br>Solo: ${devS} <br>Flexi: ${devF} <br>Rank: ${rank}<br>KDA: ${rank}<br></div><div class="achievements">Achivements<br><hr>-Pictures of Achievements-<br></div>
+		    </div>
+	
+
 </body>
 </html>
