updated summoner preview

--- a/Eclipse/LeagueOfStalk/WebContent/SummonerPreview.html
+++ b/Eclipse/LeagueOfStalk/WebContent/SummonerPreview.html
@@ -17,6 +17,26 @@
 		    <div class="summonerdata"><br>${name}<br>Level: ${lvl}<br>Solo: ${devS} <br>Flexi: ${devF} <br>Rank: ${rank}<br>KDA: ${rank}<br></div><div class="achievements">Achivements<br><hr>-Pictures of Achievements-<br></div>
 		    </div>
 	
+			<div class="summonerContent"> <table width="200" border="1" cellpadding="5" cellspacing="5" class="matchupTable">
+  <tbody>
+    <tr>
+      <td><div class = "matchSummoner"></div></td>
+      <td><div class = "matchSummoner"></div></td>
+      <td><div class = "matchSummoner"></div></td>
+      <td><div class = "matchSummoner"></div></td>
+      <td><div class = "matchSummoner"></div></td>
+    </tr>
+    <tr>
+      <td><div class = "matchSummoner"></div></td>
+      <td><div class = "matchSummoner"></div></td>
+      <td><div class = "matchSummoner"></div></td>
+      <td><div class = "matchSummoner"></div></td>
+      <td><div class = "matchSummoner"></div></td>
+    </tr>
+  </tbody>
+</table>
 
+			  
+            </div>
 </body>
 </html>
